<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/edit_text_mobile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_box_height"
            android:hint="@string/hint_mobile_no"
            android:inputType="number"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_box_height"
            android:layout_below="@+id/edit_text_mobile"
            android:hint="@string/hint_password"
            android:padding="10dp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_password"
            android:layout_margin="10dp"
            android:text="@string/label_login"></Button>

        <TextView
            android:id="@+id/create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_btn"
            android:layout_alignParentEnd="true"
            android:text="@string/label_create_acc"
            android:textAlignment="viewStart"></TextView>

    </RelativeLayout>

</RelativeLayout>